--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,11 @@
   <depend>image_transport</depend>
   <depend>pcl_conversions</depend>
   <depend>area_graph_data_parser</depend>
+  
+  <!-- New dependencies for refactored nodes -->
+  <depend>yaml-cpp</depend>
+  <depend>rosbag2_cpp</depend>
+  <depend>rosbag2_storage</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
