--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 project(localization_using_area_graph)
 
+if(POLICY CMP0074)
+  cmake_policy(SET CMP0074 NEW)
+endif()
+
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
@@ -20,21 +24,38 @@ find_package(nav_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(tf2_eigen REQUIRED)           # 添加这个
+find_package(tf2_msgs REQUIRED)            # 添加这个
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(PCL REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Ceres REQUIRED)
+find_package(message_filters REQUIRED)
 find_package(OpenMP REQUIRED)
 find_package(area_graph_data_parser REQUIRED)
-find_package(yaml_cpp REQUIRED)
+find_package(yaml-cpp REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
 find_package(rosbag2_storage REQUIRED)
-
+find_package(pcl_conversions REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(PCL REQUIRED COMPONENTS
+  common
+  io
+  filters
+  registration
+  kdtree
+  search
+  sample_consensus
+  segmentation
+)
 # Include directories
 include_directories(
   include
   ${PCL_INCLUDE_DIRS}
+  ${pcl_conversions_INCLUDE_DIRS}
+  ${pcl_ros_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
 )
 
@@ -59,6 +80,8 @@ ament_target_dependencies(utility
 
 target_link_libraries(utility
   ${PCL_LIBRARIES}
+  ${pcl_conversions_LIBRARIES}
+  ${pcl_ros_LIBRARIES}
   ${OpenCV_LIBRARIES}
   ${CERES_LIBRARIES}
   OpenMP::OpenMP_CXX
@@ -77,7 +100,9 @@ target_link_libraries(cloud_handler
   ${PCL_LIBRARIES}
   ${OpenCV_LIBRARIES}
   ${CERES_LIBRARIES}
+  ${message_filters_LIBRARIES}
   OpenMP::OpenMP_CXX
+  tf2_geometry_msgs::tf2_geometry_msgs  # 修改这一行
 )
 
 ## AMCL TF broadcaster
@@ -98,6 +123,7 @@ add_executable(particle_generator
 
 target_link_libraries(particle_generator
   utility
+  ${PCL_LIBRARIES}
 )
 
 ## Data Sender
@@ -150,6 +176,7 @@ foreach(target
     visualization_msgs
     tf2
     tf2_ros
+    tf2_geometry_msgs  # 添加这一行
     cv_bridge
     image_transport
     area_graph_data_parser
