--- a/package.xml
+++ b/package.xml
@@ -17,10 +17,15 @@
   <depend>visualization_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
+  <depend>libpcl-all-dev</depend>
   <depend>area_graph_data_parser</depend>
+  <depend>message_filters</depend>
   
   <!-- New dependencies for refactored nodes -->
   <depend>yaml-cpp</depend>
