last version can run

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "python.autoComplete.extraPaths": [
         "/home/jay/AGLoc_ws/install/area_graph_data_parser/lib/python3.10/site-packages",
         "/opt/ros/iron/lib/python3.10/site-packages"
+    ],
+    "files.associations": {
+        "core": "cpp"
+    },
+    "python.analysis.extraPaths": [
+        "/home/jay/AGLoc_ws/install/area_graph_data_parser/lib/python3.10/site-packages",
+        "/opt/ros/iron/lib/python3.10/site-packages"
     ]
 }
