--- a/config/params.yaml
+++ b/config/params.yaml
@@ -159,7 +159,7 @@
                         # given initial pose, only localization, only set initialied in code
 
         # 是否全局定位+位姿跟踪（模式2）
-        bRescueRobot: false                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
+        bRescueRobot: true                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
         
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
         bTestRescue:  false                  # 是否测试 [全局定位准不准] 模式
