--- a/config/params.yaml
+++ b/config/params.yaml
@@ -66,8 +66,7 @@
 
             # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了
         initialYawAngle: 90.0 
-        # Robot pose in tracking: [3.661183, -2.742963]
-        initialExtrinsicTrans: [3.6, -2.7, 0.0] 
+        initialExtrinsicTrans: [4.0, -6.0, 0.0] 
 
         # 是否全局定位+位姿跟踪（模式2）
         bRescueRobot: false                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
@@ -76,6 +75,8 @@
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
         bTestRescue:  true               # 是否测试 [全局定位准不准] 模式
         bInitializationWithICP: false
+        root_long: 121.59139728509
+        root_lat: 31.17947960435
         # initialExtrinsicTrans: [10.0, -9.5, 0.0]   #a rather good initial guess [0.5, 0.15, 0.0] 
     # -------------------------------------
 
