first edition that conquer all three mode & bugs

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -69,25 +69,19 @@
         initialExtrinsicTrans: [4.0, -6.0, 0.0] 
 
         # 是否全局定位+位姿跟踪（模式2）
-        bRescueRobot: true                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
+        bRescueRobot: false                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
         
         # 25.2.20在测试这个模式-希望跑通 -- 2.28已跑通
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
-        bTestRescue:  false               # 是否测试 [全局定位准不准] 模式
+        bTestRescue:  true               # 是否测试 [全局定位准不准] 模式
         bInitializationWithICP: false
         root_long: 121.59139728509
         root_lat: 31.17947960435
-        # initialExtrinsicTrans: [10.0, -9.5, 0.0]   #a rather good initial guess [0.5, 0.15, 0.0] 
-    # -------------------------------------
 
-        # for Robot pose 0524 bag - 也即 seq02 在SIST1-A
-        # 这里seq02所使用的osmAG地图的root_node是不规范的权宜之计（与所有的osmAG不同）
-            # 因此这里的参数也不同，但没有参考价值
-        # mapExtrinsicTrans: [146.0,-64.0, -16.0] 
-        # mapYawAngle: 0.0 #0524
-
-        # initialYawAngle: 180.0 # 247 #174 #184 #corridor:180 # 20 #43     20s:90
-        # initialExtrinsicTrans: [-1.0, -3.2, 0.0] # 从pandarQT转到map下
+                # 添加particle_generator参数
+        particle_generator_step: 2.0       # 粒子采样步长
+        particle_generator_radius: 2.0     # 搜索半径(米)
+        # --------------------------------------------------------
 
         opti: true
         ##LBFGS para
@@ -105,11 +99,6 @@
         machine_prec : 1.0e-16
 
 
-
-        # ICP参数
-        # 这些参数实现了论文III.F节"Pose Tracking via weighted point-to-line ICP"中的算法，主要在：
-            # cloudHandler.cpp的optimizationICP()中使用
-            # cloudInitializer.cpp的initializationICP()中使用
 
         translation_thres: 0.01                # 平移阈值
         icp_iteration: 15 #10                  # 常规ICP迭代次数
@@ -157,22 +146,10 @@
         initialization_imu: false
         diff_angle_init: 150.0
         # without icp initialization 2
-        rescue_angle_interval: 2.0
+        rescue_angle_interval: 10.0
 
 
 
-        # case1: bRescueRobot: true, bTestRescue: true
-                        # test rescue robot, meaning all frames are supposed to get a rescue result
-        # case2: bRescueRobot: true, bTestRescue: false
-                        # rescue robot once, then go to nominal localization
-                        # this is how the real robot operate, rescue then localization
-        # case3: bRescueRobot: false, bTestRescue: fasle
-                        # given initial pose, only localization, only set initialied in code
-
-        # 添加particle_generator参数
-        particle_generator_step: 1.0       # 粒子采样步长
-        particle_generator_radius: 3.0     # 搜索半径(米)
-        # --------------------------------------------------------
 
         bOnlyScoreParticles: false
         scoreDownsampleRate: 0.4
