--- a/config/params.yaml
+++ b/config/params.yaml
@@ -70,12 +70,13 @@
         # 25.2.20在测试这个模式-希望跑通 -- 2.28已跑通
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
         bTestRescue:  false               # 是否测试 [全局定位准不准] 模式
+        # (全局定位ICP还不work)
         bInitializationWithICP: false
         root_long: 121.59139728509
         root_lat: 31.17947960435
 
 
-        # 是否用多线程优化rescueRobot
+        # 是否用多线程优化rescueRobot (多线程还不work)
         use_multithread: false
 
         # 添加particle_generator参数
